Feat(User): User methods implemented - test pending

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@aws-cdk/aws-amplify-alpha": "^2.126.0-alpha.0",
     "aws-cdk-lib": "2.126.0",
+    "aws-sdk": "^2.1692.0",
     "awscdk-resources-mongodbatlas": "^3.1.2",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.2",
