--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-amplify-alpha": "^2.126.0-alpha.0",
-    "aws-cdk-lib": "2.126.0",
-    "aws-sdk": "^2.1692.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.699.0",
+    "aws-cdk-lib": "^2.150.0",
     "awscdk-resources-mongodbatlas": "^3.1.2",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.2",
