--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.14",
     "@types/uuid": "^9.0.8",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "aws-cdk": "2.126.0",
@@ -35,14 +36,17 @@
     "@aws-cdk/aws-amplify-alpha": "^2.126.0-alpha.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.699.0",
     "aws-cdk-lib": "^2.150.0",
+    "aws-sdk": "^2.1692.0",
     "awscdk-resources-mongodbatlas": "^3.1.2",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.2",
+    "pdf-lib": "^1.17.1",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.1",
+    "validator": "^13.12.0",
     "zod": "^3.22.4"
   }
 }
