--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@aws-sdk/client-s3": "^3.750.0",
     "@smithy/core": "^3.1.5",
     "aws-cdk-lib": "^2.178.1",
+    "aws-sdk": "^2.1692.0",
     "awscdk-resources-mongodbatlas": "^3.1.2",
     "constructs": "^10.4.2",
     "dotenv": "^16.4.2",
